Fix: display size too small

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
 .displayScreen {
   background-color: #a5a5a5f5;
   position: relative;
+  font-size: 2rem;
   left: 9.5%;
   border-radius: 25px;
   height: 15%;
